<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <!-- TODO: Update blank fragment layout -->
    <DatePicker
        android:id="@+id/calender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?attr/colorBackgroundFloating"
        android:elevation="-1dp"
        android:translationY="30dp"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:text="@string/get_started_free"
            android:textSize="38sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome"
            android:layout_centerHorizontal="true"
            android:text="@string/free_forever_no_credit_card_needed"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/inputfields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcomeMessage"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="6dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxCornerRadiusTopEnd="14dp"
                app:boxCornerRadiusTopStart="14dp"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="3dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxCornerRadiusTopEnd="14dp"
                app:boxCornerRadiusTopStart="14dp"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="3dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxCornerRadiusTopEnd="14dp"
                app:boxCornerRadiusTopStart="14dp"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="3dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/calenderLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxCornerRadiusTopEnd="14dp"
                app:boxCornerRadiusTopStart="14dp"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="3dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_birth" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputfields"
            android:layout_alignEnd="@+id/inputfields"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_password"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/forget"
            android:layout_marginHorizontal="52dp"
            android:layout_marginBottom="14dp"
            android:text="@string/signup"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="18dp" />

        <LinearLayout
            android:id="@+id/continuewith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup"
            android:layout_marginHorizontal="70dp"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@drawable/fadingline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/or_continue_with"
                android:textSize="12sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@drawable/fadingline"
                android:rotationY="180" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/continuewith"
            android:layout_marginHorizontal="60dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:minWidth="0dp"
                android:paddingEnd="16dp"
                app:cornerRadius="14dp"
                app:icon="@drawable/google"
                app:iconGravity="textStart"
                app:iconTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:strokeColor="?attr/colorAccent"
                app:strokeWidth="2dp"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/sign_in"
                android:textColor="?attr/colorAccent"
                app:cornerRadius="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/facebook"
                app:layout_constraintStart_toStartOf="@id/google"
                app:strokeColor="?attr/colorAccent"
                app:strokeWidth="2dp"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:minWidth="0dp"
                android:paddingEnd="16dp"
                app:cornerRadius="14dp"
                app:icon="@drawable/facebook"
                app:iconGravity="textStart"
                app:iconTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:strokeColor="?attr/colorAccent"
                app:strokeWidth="2dp"
                tools:ignore="RtlSymmetry" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</FrameLayout>