<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    tools:context=".StartupPage">


    <ImageView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/nav"
        android:layout_marginBottom="70dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardElevation="30dp"
        app:shapeAppearanceOverlay="@style/TopRoundedCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="start"
                android:id="@+id/textbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:fontFamily="serif"
                android:text=""
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="24dp"
                android:text="@string/login"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="16dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="30dp"
                android:text="@string/signup"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="16dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>